[package]
name = "jinja-formatter"
version = "0.1.0"
edition = "2021"
authors = [
  "panrz <panrz@deepseek.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
lazy_static = "1.5.0"
pulldown-cmark = { version = "0.11.0", features = ["simd"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.1", features = ["full"] }
tree-sitter = "0.22.6"
tree-sitter-jinja2 = "0.0.8"
